<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="placeIt_details">PlaceIt Details</string>
    <string name="tap_instructions">Tap or long press on the map</string>
    <string name="move_the_camera">Move the camera</string>
    <string name="title_activity_place_it_form">PlaceItFormActivity</string>
    <string name="str_btn_find">Find</string>
    <string name="enter_title">Title</string>
    <string name="enter_description">Description</string>
    <string name="enter_location">Location</string>

    <!-- Weijie Hu and Zhengde Zhen Added -->
    <string name="menu_map">Map</string>
    <string name="menu_list">List</string>
    <string name="menu_add_category">Add Category</string>
    <string name="menu_create">Create</string>
    <string name="title_section1">Pending</string>
    <string name="title_section2">Completed</string>
    <!-- Ctring name="title_section3">Expired</string> -->
    <string name="title_list_view_activity">List View</string>
    <string name="place_it_manager_menu_add">Confirm</string>
    <string name="place_it_manager_menu_cancel">Cancel</string>
    <string name="title_data_manager">Place-Its Manager</string>
    <string name="title_hint">Title:</string>
    <string name="description_hint">Description:</string>
    <string name="location_hint">Location:</string>
    <string name="icon_gap">4sp</string>
    <string name="search_location">Find a location to add a Place-It</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="delete_btn">Delete PlaceIt</string>
    <string name="schedule">schedule</string>
    <string name="location">location</string>
    <string name="description">description</string>
    <string name="title">title</string>

    <!-- Strings for Login/Registration -->
    <string name="createuser">Create login username</string>
    <string name="createpw">Create login password</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="pw">Password</string>
    <string name="login">Login</string>

    <!-- For day of week selection -->
    <string name="week_day"> - </string>

    <string-array name="day_array">
        <item> - </item>
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <!-- For repeated events -->
    <string name="week_interval"> Every week </string>

    <string-array name="week_array">
        <item>week</item>
        <item>two weeks</item>
        <item>three weeks</item>
        <item>four weeks</item>
    </string-array>

    <!-- For repeated events -->
    <string name="scheduling_choices"> - </string>

    <string-array name="scheduling_choices_array">
        <item> - </item>
        <item>weekly</item>
        <item>by the minute</item>
    </string-array>

    <string name="category_prompt">You can at most add three categories to placeIt</string>

    <string-array name="category_array">
        <item>""</item>
        <item>accounting</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>atm</item>
        <item>bakery</item>
        <item>bank</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bicycle_store</item>
        <item>book_store</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_dealer</item>
        <item>car_rental</item>
        <item>car_repair</item>
        <item>car_wash</item>
        <item>casino</item>
        <item>cemetery</item>
        <item>church</item>
        <item>city_hall</item>
        <item>clothing_store</item>
        <item>convenience_store</item>
        <item>courthouse</item>
        <item>dentist</item>
        <item>department_store</item>
        <item>doctor</item>
        <item>electrician</item>
        <item>electronics_store</item>
        <item>embassy</item>
        <item>establishment</item>
        <item>finance</item>
        <item>fire_station</item>
        <item>florist</item>
        <item>food</item>
        <item>funeral_home</item>
        <item>furniture_store</item>
        <item>gas_station</item>
        <item>general_contractor</item>
        <item>grocery_or_supermarket</item>
        <item>gym</item>
        <item>hair_care</item>
        <item>hardware_store</item>
        <item>health</item>
        <item>hindu_temple</item>
        <item>home_goods_store</item>
        <item>hospital</item>
        <item>insurance_agency</item>
        <item>jewelry_store</item>
        <item>laundry</item>
        <item>lawyer</item>
        <item>library</item>
        <item>liquor_store</item>
        <item>local_government_office</item>
        <item>locksmith</item>
        <item>lodging</item>
        <item>meal_delivery</item>
        <item>meal_takeaway</item>
        <item>mosque</item>
        <item>movie_rental</item>
        <item>movie_theater</item>
        <item>moving_company</item>
        <item>museum</item>
        <item>night_club</item>
        <item>painter</item>
        <item>park</item>
        <item>parking</item>
        <item>pet_store</item>
        <item>pharmacy</item>
        <item>physiotherapist</item>
        <item>place_of_worship</item>
        <item>plumber</item>
        <item>police</item>
        <item>post_office</item>
        <item>real_estate_agency</item>
        <item>restaurant</item>
        <item>roofing_contractor</item>
        <item>rv_park</item>
        <item>school</item>
        <item>shoe_store</item>
        <item>shopping_mall</item>
        <item>spa</item>
        <item>stadium</item>
        <item>storage</item>
        <item>store</item>
        <item>subway_station</item>
        <item>synagogue</item>
        <item>taxi_stand</item>
        <item>train_station</item>
        <item>travel_agency</item>
        <item>university</item>
        <item>veterinary_care</item>
        <item>zoo</item>
    </string-array>

    <string name="login_page_title">Group 30 - Place-It</string>
    <string name="title_activity_place_its_category_form">PlaceItsCategoryForm</string>

</resources>
