<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/location_hint"
        android:inputType="textPostalAddress"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingTop="50sp"
        android:text="Select Day For PlaceIt:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText" />

     <Spinner
        android:id="@+id/day_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/day_array"
        android:prompt="@string/week_day"/>
     
     <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:paddingTop="50sp"
        android:text="Select An Interval:"
        android:textAppearance="?android:attr/textAppearanceMedium"
        tools:ignore="HardcodedText" />
     
     <Spinner
        android:id="@+id/week_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/week_array"
        android:prompt="@string/week_interval"/>

</LinearLayout>