<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Username field -->

    <EditText
        android:id="@+id/regEdit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:ems="10"
        android:hint="@string/createuser"
        android:textSize="24sp" />
    
	<!-- Password field -->

    <EditText
        android:id="@+id/regEdit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:ems="10"
        android:hint="@string/createpw"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <!-- Register button -->

    <Button
        android:id="@+id/regbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/register"
        android:textSize="24sp" />
    
</LinearLayout>